set Referrer-Policy to "strict-origin" fix

--- a/contrib/etc/apache/conf.d/vhost.conf
+++ b/contrib/etc/apache/conf.d/vhost.conf
@@ -50,6 +50,7 @@ AddType  application/font-woff2  .woff2
         Header always set Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE"
         Header always set Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With"
         Header always set Access-Control-Max-Age "3600"
+        Header always set Referrer-Policy "strict-origin"
     </IfModule>
 
     <Directory /opt/src/web-components>
