--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "test:wc:list": "ng test wc-list-prescriptions",
     "test": "npm run test:wc:details && npm run test:wc:create && npm run test:wc:list && npm run test:wc:reuse",
     "test:coverage": "npm run test:wc:details && npm run test:wc:create && npm run test:wc:list && npm run test:wc:reuse && npm run merge:coverage && npm run merge:report",
-    "merge:coverage": "npx istanbul-merge --out coverage.json ./reuse/coverage/coverage-final.json ./wc-prescription-details/coverage/coverage-final.json ./wc-create-prescription/coverage/coverage-final.json ./wc-list-prescriptions/coverage/coverage-final.json",
-    "merge:report": "npx istanbul report --include coverage.json --dir coverage html",
+    "merge:coverage": "npx istanbul-merge --out .nyc_output/coverage.json ./reuse/coverage/coverage-final.json ./wc-prescription-details/coverage/coverage-final.json ./wc-create-prescription/coverage/coverage-final.json ./wc-list-prescriptions/coverage/coverage-final.json",
+    "merge:report": "npx nyc report --reporter=lcov --report-dir=coverage --temp-dir=.nyc_output",
     "lint": "ng lint",
     "preversion": "rm -rf ./dist",
     "version": "npm run build",
