--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "build:wc:list": "ng build wc-prescription-list --configuration production --output-hashing none && vite build --mode production -c wc-prescription-list/vite.config.mjs && rm -rf ./dist/wc-prescription-list/browser",
     "serve:wc:list": "ng serve wc-prescription-list",
     "build:wc:create": "npm run build:wc:evfform && npm run build:wc:create:no-deps",
-    "build:wc:create:no-deps": "ng build wc-create-prescription --configuration production --output-hashing none && vite build --mode production -c ./wc-create-prescription/vite.config.mjs && rm -rf ./dist/wc-create-prescription/browser",
-    "serve:wc:create": "npm run build:wc:evfform && ng serve wc-create-prescription",
+    "build:wc:create:no-deps": "ng build wc-prescription-create --configuration production --output-hashing none && vite build --mode production -c wc-prescription-create/vite.config.mjs && rm -rf ./dist/wc-prescription-create/browser",
+    "serve:wc:create": "npm run build:wc:evfform && ng serve wc-prescription-create",
     "build:wc:evfdetails": "ng build wc-evf-form-details --configuration production --output-hashing none && vite build --mode production -c ./wc-evf-form-details/vite.config.mjs",
     "build:wc:pdf": "ng build wc-pdfmake --configuration production --output-hashing none && vite build --mode production -c ./wc-pdfmake/vite.config.mjs",
     "build:wc:evfform": "ng build wc-evf-form --configuration production --output-hashing none && vite build --mode production -c ./wc-evf-form/vite.config.mjs",
@@ -20,11 +20,11 @@
     "test:wc:reuse": "ng test reuse",
     "test:wc:pdf": "ng test wc-pdfmake",
     "test:wc:details": "ng test wc-prescription-details",
-    "test:wc:create": "ng test wc-create-prescription",
+    "test:wc:create": "ng test wc-prescription-create",
     "test:wc:list": "ng test wc-prescription-list",
     "test": "npm run test:wc:details && npm run test:wc:create && npm run test:wc:list && npm run test:wc:reuse && npm run test:wc:pdf",
     "test:coverage": "npm run test:wc:details && npm run test:wc:create && npm run test:wc:list && npm run test:wc:reuse && npm run merge:coverage && npm run merge:report",
-    "merge:coverage": "npx istanbul-merge --out .nyc_output/coverage.json ./reuse/coverage/coverage-final.json ./wc-prescription-details/coverage/coverage-final.json ./wc-create-prescription/coverage/coverage-final.json ./wc-prescription-list/coverage/coverage-final.json",
+    "merge:coverage": "npx istanbul-merge --out .nyc_output/coverage.json ./reuse/coverage/coverage-final.json ./wc-prescription-details/coverage/coverage-final.json ./wc-prescription-create/coverage/coverage-final.json ./wc-prescription-list/coverage/coverage-final.json",
     "merge:report": "npx nyc report --reporter=lcov --report-dir=coverage --temp-dir=.nyc_output",
     "lint": "ng lint",
     "generate-api": "npx openapi-generator-cli generate -i api-contract/openapi.yaml -g typescript-angular -o reuse/code/openapi --additional-properties fileNaming=kebab-case,withInterfaces=true --generate-alias-as-model",
@@ -47,8 +47,8 @@
     "@angular/platform-browser": "^19.2.2",
     "@angular/platform-browser-dynamic": "^19.2.2",
     "@angular/router": "^19.2.2",
-    "@myhealth-belgium/design-kit": "^3.0.2",
-    "@myhealth-belgium/myhealth-additional-ui-components": "^2.0.1",
+    "@myhealth-belgium/design-kit": "^3.1.0",
+    "@myhealth-belgium/myhealth-additional-ui-components": "^2.0.2",
     "@ngx-translate/core": "^16.0.4",
     "@sentry/angular": "^9.5.0",
     "@smals-belgium-shared/pseudo-helper": "^1.1.1",
@@ -102,7 +102,7 @@
     "@rollup/rollup-linux-x64-gnu": "4.17.2"
   },
   "files": [
-    "dist/wc-create-prescription",
+    "dist/wc-prescription-create",
     "dist/wc-prescription-list",
     "dist/wc-prescription-details"
   ]
