--- a/wc-prescription-create/tsconfig.app.json
+++ b/wc-prescription-create/tsconfig.app.json
@@ -7,7 +7,8 @@
     "resolveJsonModule": true
   },
   "files": [
-    "src/main.ts"
+    "./src/main.ts",
+    "src/polyfills.ts"
   ],
   "include": [
     "src/**/*.d.ts"
