--- a/wc-prescription-create/tsconfig.spec.json
+++ b/wc-prescription-create/tsconfig.spec.json
@@ -8,7 +8,8 @@
       "node"
     ],
     "emitDecoratorMetadata": true,
-    "typeRoots": ["../node_modules/@types", "../node_modules/@types/node"]
+    "typeRoots": [
+      "../node_modules/@types", "../node_modules/@types/node"]
   },
   "include": [
     "src/**/*.spec.ts",
