--- a/package.json
+++ b/package.json
@@ -36,29 +36,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.2.2",
-    "@angular/common": "^19.2.2",
-    "@angular/compiler": "^19.2.2",
-    "@angular/core": "^19.2.2",
+    "@angular/animations": "^19.2.15",
+    "@angular/cdk": "^19.2.15",
+    "@angular/common": "^19.2.15",
+    "@angular/compiler": "^19.2.15",
+    "@angular/core": "^19.2.15",
     "@angular/elements": "^19.2.2",
-    "@angular/forms": "^19.2.2",
-    "@angular/material": "^19.2.3",
-    "@angular/material-luxon-adapter": "^19.2.3",
-    "@angular/platform-browser": "^19.2.2",
-    "@angular/platform-browser-dynamic": "^19.2.2",
-    "@angular/router": "^19.2.2",
+    "@angular/forms": "^19.2.15",
+    "@angular/material": "^19.2.15",
+    "@angular/material-luxon-adapter": "^19.2.15",
+    "@angular/platform-browser": "^19.2.15",
+    "@angular/platform-browser-dynamic": "^19.2.15",
+    "@angular/router": "^19.2.15",
+    "@messageformat/core": "^3.4.0",
     "@myhealth-belgium/design-kit": "^3.1.0",
     "@myhealth-belgium/myhealth-additional-ui-components": "^2.0.2",
     "@ngx-translate/core": "^16.0.4",
     "@sentry/angular": "^9.5.0",
     "@smals-belgium-shared/pseudo-helper": "^1.1.1",
     "@smals/ngx-configuration-service": "^5.0.0",
-    "@smals/vas-evaluation-form-ui-core": "^6.0.1",
-    "@smals/vas-evaluation-form-ui-material": "^6.0.1",
+    "@smals/vas-evaluation-form-ui-core": "^6.5.0",
+    "@smals/vas-evaluation-form-ui-material": "^6.5.0",
     "@types/marked": "^6.0.0",
     "@types/pdfmake": "^0.2.9",
     "luxon": "^3.5.0",
     "marked": "^15.0.7",
+    "ngx-markdown": "^19.1.1",
     "ngx-mask": "^17.0.8",
     "ngx-skeleton-loader": "^11.2.1",
     "ngx-translate-messageformat-compiler": "^7.0.0",
@@ -71,15 +74,16 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-builders/jest": "^19.0.0",
+    "@angular-builders/jest": "^19.0.1",
+    "@angular-devkit/build-angular": "^19.2.18",
     "@angular-eslint/builder": "19.4.0",
     "@angular-eslint/eslint-plugin": "19.4.0",
     "@angular-eslint/eslint-plugin-template": "19.4.0",
     "@angular-eslint/schematics": "19.4.0",
     "@angular-eslint/template-parser": "19.4.0",
-    "@angular/build": "^19.2.3",
-    "@angular/cli": "^19.2.3",
-    "@angular/compiler-cli": "^19.2.2",
+    "@angular/build": "^19.2.15",
+    "@angular/cli": "^19.2.15",
+    "@angular/compiler-cli": "^19.2.15",
     "@openapitools/openapi-generator-cli": "^2.24.0",
     "@types/jest": "^29.5.12",
     "@types/luxon": "^3.4.2",
