--- a/.openshift/resource/deployment_up.yaml
+++ b/.openshift/resource/deployment_up.yaml
@@ -1,34 +1,34 @@
-apiVersion: v1
-kind: DeploymentConfig
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: &deploymentconfig referral-prescription-web-components-up
+  name: &instance referral-prescription-web-components-up
   annotations:
     app.openshift.io/vcs-uri: 'https://git.vascloud.be/nihdi/uhmep/healix/web-components'
-  labels:
-    deploymentconfig: *deploymentconfig
-    group: uhmep
-    app.kubernetes.io/part-of: uhmep-frontoffice
-    app.kubernetes.io/name: *deploymentconfig
-    app.kubernetes.io/instance: *deploymentconfig
-    app.kubernetes.io/component: *deploymentconfig
+    app.openshift.io/connects-to: '["referral-prescription-web-bridge"]'
+  labels: &labels
+    app.kubernetes.io/part-of: referral-prescription
+    app.kubernetes.io/name: referral-prescription-web-components
+    app.kubernetes.io/instance: *instance
+    app.kubernetes.io/component: frontend
+    app.kubernetes.io/managed-by: deploywh
+    app.openshift.io/runtime: angularjs
+    # please verify package.json
+    app.openshift.io/runtime-version: 19.2.2
 spec:
-  replicas: 3
+  replicas: 1
   revisionHistoryLimit: 1
   selector:
-    deploymentconfig: *deploymentconfig
+    matchLabels:
+      app.kubernetes.io/instance: *instance
   strategy:
-    resources: {}
-    rollingParams:
-      intervalSeconds: 1
-      maxSurge: 100%
-      maxUnavailable: 0%
-      timeoutSeconds: 600
-      updatePeriodSeconds: 1
-    type: Rolling
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
+    type: RollingUpdate
   template:
     metadata:
       labels:
-        deploymentconfig: *deploymentconfig
+        <<: *labels
     spec:
       containers:
         - env:
@@ -68,5 +68,3 @@ spec:
       volumes:
         - name: shared-log
           emptyDir: { }
-  test: false
-  triggers: []
