--- a/.openshift/resource/route_acc_up.yaml
+++ b/.openshift/resource/route_acc_up.yaml
@@ -5,14 +5,20 @@ apiVersion: v1
 kind: Route
 metadata:
   name: referral-prescription-web-components-lb-public
+  annotations:
+    app.openshift.io/vcs-uri: 'https://git.vascloud.be/nihdi/uhmep/healix/web-components'
   labels:
-    deploymentconfig: &deploymentconfig referral-prescription-web-components-up
+    app.kubernetes.io/part-of: referral-prescription
+    app.kubernetes.io/name: referral-prescription-web-components
+    app.kubernetes.io/instance: &instance referral-prescription-web-components-up
+    app.kubernetes.io/component: frontend
+    app.kubernetes.io/managed-by: deploywh
 spec:
   host: wwwacc.referral-prescription.ehealth.fgov.be
   path: /web-components
   to:
     kind: Service
-    name: *deploymentconfig
+    name: *instance
     weight: 100
 ---
 # ============================================== #
@@ -22,12 +28,18 @@ apiVersion: v1
 kind: Route
 metadata:
   name: referral-prescription-web-components-up-public
+  annotations:
+    app.openshift.io/vcs-uri: 'https://git.vascloud.be/nihdi/uhmep/healix/web-components'
   labels:
-    deploymentconfig: &deploymentconfig referral-prescription-web-components-up
+    app.kubernetes.io/part-of: referral-prescription
+    app.kubernetes.io/name: referral-prescription-web-components
+    app.kubernetes.io/instance: &instance referral-prescription-web-components-up
+    app.kubernetes.io/component: frontend
+    app.kubernetes.io/managed-by: deploywh
 spec:
   host: wwwacc.referral-prescription.up.ehealth.fgov.be
   path: /web-components
   to:
     kind: Service
-    name: *deploymentconfig
+    name: *instance
     weight: 100
