--- a/.openshift/resource/svc.yaml
+++ b/.openshift/resource/svc.yaml
@@ -1,15 +1,21 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: &deploymentconfig referral-prescription-web-components
+  name: &instance referral-prescription-web-components
+  annotations:
+    app.openshift.io/vcs-uri: 'https://git.vascloud.be/nihdi/uhmep/healix/web-components'
   labels:
-    deploymentconfig: *deploymentconfig
+    app.kubernetes.io/part-of: referral-prescription
+    app.kubernetes.io/name: referral-prescription-web-components
+    app.kubernetes.io/instance: *instance
+    app.kubernetes.io/component: frontend
+    app.kubernetes.io/managed-by: deploywh
 spec:
   ports:
     - port: 8080
       protocol: TCP
       targetPort: 8080
   selector:
-    deploymentconfig: *deploymentconfig
+    app.kubernetes.io/instance: *instance
   sessionAffinity: None
   type: ClusterIP
