--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -116,7 +116,8 @@
         "@typescript-eslint/unbound-method": "off",
         "@typescript-eslint/no-unsafe-call": "off",
         "@typescript-eslint/no-unsafe-assignment": "off",
-        "@typescript-eslint/no-unsafe-argument": "off"
+        "@typescript-eslint/no-unsafe-argument": "off",
+        "@typescript-eslint/no-unsafe-return": "off"
       }
     }
   ]
