--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "preversion": "rm -rf ./dist && git submodule update --init --recursive",
     "version": "npm run generate-api:fromTools && npm run build",
     "postversion": "npm pack .",
-    "api:client:init": "git submodule update --init --recursive && npx copyfiles -f ./lib/openapi-generator-cli/7.14.0/openapi-generator-cli-7.14.0.jar ./node_modules/@openapitools/openapi-generator-cli/versions/ && npm run generate-api:local"
+    "api:client:init": "git submodule update --init --recursive && npx copyfiles -f ./lib/openapi-generator-cli/7.14.0/openapi-generator-cli-7.14.0.jar ./node_modules/@openapitools/openapi-generator-cli/versions/ && npm run generate-api:local",
+    "release": "git push github master"
   },
   "private": true,
   "dependencies": {
