check node version

--- a/.github/workflows/build-and-release-to-npm.yml
+++ b/.github/workflows/build-and-release-to-npm.yml
@@ -22,6 +22,11 @@ jobs:
           node-version: '20'
           registry-url: 'https://registry.npmjs.org/'
 
+      - name: Check Node and npm versions
+        run: |
+          node -v
+          npm -v
+
       - name: Setup Java
         uses: actions/setup-java@v4
         with:
@@ -34,6 +39,9 @@ jobs:
           generator: typescript-angular
           openapi-file: api-contract/openapi.yaml
           command-args: -o reuse/code/openapi --additional-properties fileNaming=kebab-case,withInterfaces=true --generate-alias-as-model
+
+      - name: Clean npm cache (optional but recommended)
+        run: npm cache clean --force
 
       - name: Install dependencies
         run: npm ci
