--- a/.github/workflows/build-and-release-to-npm.yml
+++ b/.github/workflows/build-and-release-to-npm.yml
@@ -21,6 +21,7 @@ jobs:
         with:
           node-version: '20'
           registry-url: 'https://registry.npmjs.org/'
+          cache: 'npm'
 
       - name: Setup Java
         uses: actions/setup-java@v4
@@ -35,11 +36,10 @@ jobs:
           openapi-file: api-contract/openapi.yaml
           command-args: -o reuse/code/openapi --additional-properties fileNaming=kebab-case,withInterfaces=true --generate-alias-as-model
 
-      - name: Clean npm cache
-        run: npm cache clean --force
-
       - name: Install dependencies
         run: npm ci
+        env:
+          NODE_OPTIONS: "--max-old-space-size=8192"
 
       - name: Build all packages
         run: npm run build:all-packages
