--- a/.github/workflows/build-and-release-to-npm.yml
+++ b/.github/workflows/build-and-release-to-npm.yml
@@ -37,7 +37,7 @@ jobs:
           command-args: -o reuse/code/openapi --additional-properties fileNaming=kebab-case,withInterfaces=true --generate-alias-as-model
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --loglevel verbose
         env:
           NODE_OPTIONS: "--max-old-space-size=8192"
 
