--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
     "ng": "ng",
     "start": "npm run serve:wc:details",
     "build": "npm run build:wc:create && npm run build:wc:list && npm run build:wc:details",
-    "build:wc:details": "npx ng build wc-prescription-details --configuration production --output-hashing none && npx vite build --mode production -c ./wc-prescription-details/vite.config.mjs && rm -rf ./dist/wc-prescription-details/browser && rm -f ./dist/wc-prescription-details/prerendered-routes.json && cp wc-prescription-details/package.json dist/wc-prescription-details/",
+    "build:wc:details": "ng build wc-prescription-details --configuration production --output-hashing none && vite build --mode production -c ./wc-prescription-details/vite.config.mjs && rm -rf ./dist/wc-prescription-details/browser && rm -f ./dist/wc-prescription-details/prerendered-routes.json && cp wc-prescription-details/package.json dist/wc-prescription-details/",
     "serve:wc:details": "ng serve wc-prescription-details",
-    "build:wc:list": "npx ng build wc-prescription-list --configuration production --output-hashing none && npx vite build --mode production -c ./wc-prescription-list/vite.config.mjs && rm -rf ./dist/wc-prescription-list/browser && rm -f ./dist/wc-prescription-list/prerendered-routes.json && cp wc-prescription-list/package.json dist/wc-prescription-list/",
+    "build:wc:list": "ng build wc-prescription-list --configuration production --output-hashing none && vite build --mode production -c ./wc-prescription-list/vite.config.mjs && rm -rf ./dist/wc-prescription-list/browser && rm -f ./dist/wc-prescription-list/prerendered-routes.json && cp wc-prescription-list/package.json dist/wc-prescription-list/",
     "serve:wc:list": "ng serve wc-prescription-list",
-    "build:wc:create": "npx ng build wc-prescription-create --configuration production --output-hashing none && npx vite build --mode production -c ./wc-prescription-create/vite.config.mjs && rm -rf ./dist/wc-prescription-create/browser && rm -f ./dist/wc-prescription-create/prerendered-routes.json && cp wc-prescription-create/package.json dist/wc-prescription-create/",
+    "build:wc:create": "ng build wc-prescription-create --configuration production --output-hashing none && vite build --mode production -c ./wc-prescription-create/vite.config.mjs && rm -rf ./dist/wc-prescription-create/browser && rm -f ./dist/wc-prescription-create/prerendered-routes.json && cp wc-prescription-create/package.json dist/wc-prescription-create/",
     "serve:wc:create": "ng serve wc-prescription-create",
     "build:mags-prescription-list:custom-element": "ng build mags-prescription-list-webcomponent",
-    "build:mags-prescription-list": "npx ng build mags-prescription-list-webcomponent --configuration production --output-hashing none && npx vite build --mode production -c ./wrappers/components/mags-prescription-list/vite.config.mjs && npx rollup -c ./wrappers/components/mags-prescription-list/rollup.config.dts.mjs",
+    "build:mags-prescription-list": "ng build mags-prescription-list-webcomponent --configuration production --output-hashing none && vite build --mode production -c ./wrappers/components/mags-prescription-list/vite.config.mjs && rollup -c ./wrappers/components/mags-prescription-list/rollup.config.dts.mjs",
     "build:mags-prescription-details:custom-element": "ng build mags-prescription-details-webcomponent",
-    "build:mags-prescription-details": "npx ng build mags-prescription-details-webcomponent --configuration production --output-hashing none && npx vite build --mode production -c ./wrappers/components/mags-prescription-details/vite.config.mjs && npx rollup -c ./wrappers/components/mags-prescription-details/rollup.config.dts.mjs",
+    "build:mags-prescription-details": "ng build mags-prescription-details-webcomponent --configuration production --output-hashing none && vite build --mode production -c ./wrappers/components/mags-prescription-details/vite.config.mjs && rollup -c ./wrappers/components/mags-prescription-details/rollup.config.dts.mjs",
     "build:wrappers": "node wrappers/build/build.ts",
     "build:all-packages": "npm run build:wc:create && npm run build:wc:list && npm run build:wc:details && npm run build:wrappers",
     "watch": "ng build --watch --configuration development",
@@ -24,16 +24,16 @@
     "test:wc:list": "ng test wc-prescription-list",
     "test": "npm run test:wc:details && npm run test:wc:create && npm run test:wc:list && npm run test:wc:reuse",
     "test:coverage": "npm run test:wc:details && npm run test:wc:create && npm run test:wc:list && npm run test:wc:reuse && npm run merge:coverage && npm run merge:report",
-    "merge:coverage": "npx istanbul-merge --out .nyc_output/coverage.json ./reuse/coverage/coverage-final.json ./wc-prescription-details/coverage/coverage-final.json ./wc-prescription-create/coverage/coverage-final.json ./wc-prescription-list/coverage/coverage-final.json",
-    "merge:report": "npx nyc report --reporter=lcov --report-dir=coverage --temp-dir=.nyc_output",
+    "merge:coverage": "istanbul-merge --out .nyc_output/coverage.json ./reuse/coverage/coverage-final.json ./wc-prescription-details/coverage/coverage-final.json ./wc-prescription-create/coverage/coverage-final.json ./wc-prescription-list/coverage/coverage-final.json",
+    "merge:report": "nyc report --reporter=lcov --report-dir=coverage --temp-dir=.nyc_output",
     "lint": "ng lint",
-    "generate-api": "npx openapi-generator-cli generate -i api-contract/openapi.yaml -g typescript-angular -o reuse/code/openapi --additional-properties fileNaming=kebab-case,withInterfaces=true --generate-alias-as-model",
+    "generate-api": "openapi-generator-cli generate -i api-contract/openapi.yaml -g typescript-angular -o reuse/code/openapi --additional-properties fileNaming=kebab-case,withInterfaces=true --generate-alias-as-model",
     "generate-api:local": "openapi-generator-cli generate -i api-contract/openapi.yaml -g typescript-angular -o reuse/code/openapi --additional-properties fileNaming=kebab-case,withInterfaces=true --generate-alias-as-model",
     "generate-api:fromTools": "java -jar tools/openapi-generator-cli.jar generate -i api-contract/openapi.yaml -g typescript-angular -o reuse/code/openapi --additional-properties fileNaming=kebab-case,withInterfaces=true --generate-alias-as-model ",
     "preversion": "rm -rf ./dist && git submodule update --init --recursive",
     "version": "npm run generate-api:fromTools && npm run build",
     "postversion": "npm pack .",
-    "api:client:init": "git submodule update --init --recursive && npx copyfiles -f ./lib/openapi-generator-cli/7.14.0/openapi-generator-cli-7.14.0.jar ./node_modules/@openapitools/openapi-generator-cli/versions/ && npm run generate-api:local",
+    "api:client:init": "git submodule update --init --recursive && copyfiles -f ./lib/openapi-generator-cli/7.14.0/openapi-generator-cli-7.14.0.jar ./node_modules/@openapitools/openapi-generator-cli/versions/ && npm run generate-api:local",
     "push:github": "bash ./push-github.sh"
   },
   "private": true,
