--- a/.github/workflows/build-and-release-to-npm.yml
+++ b/.github/workflows/build-and-release-to-npm.yml
@@ -37,7 +37,7 @@ jobs:
           command-args: -o reuse/code/openapi --additional-properties fileNaming=kebab-case,withInterfaces=true --generate-alias-as-model
 
       - name: Install dependencies
-        run: npm ci --loglevel verbose
+        run: npm ci
         env:
           NODE_OPTIONS: "--max-old-space-size=8192"
 
@@ -56,7 +56,7 @@ jobs:
           for pkg in "${DIST_PACKAGES[@]}"; do
             VERSION=$(node -p "require('./$pkg/package.json').version")
             echo "Publishing $pkg (version $VERSION)..."
-            npm publish "$pkg" --access public ./dist
+            (cd "$pkg" && npm publish --access public)
           done
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
