--- a/wc-prescription-create/package.json
+++ b/wc-prescription-create/package.json
@@ -15,6 +15,6 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/smals-belgium/shared-referral-prescription-webcomponent"
+    "url": "https://github.com/smals-belgium/shared-referral-prescription-webcomponent.git"
   }
 }
