--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "@smals/nihdi-uhmep-healix-web-components",
-  "version": "1.14.0",
+  "version": "1.14.1",
   "scripts": {
     "ng": "ng",
     "start": "npm run serve:wc:details",
     "build": "npm run build:wc:create && npm run build:wc:list && npm run build:wc:details",
-    "build:wc:details": "ng build wc-prescription-details --configuration production --output-hashing none && vite build --mode production -c ./wc-prescription-details/vite.config.mjs && rm -rf ./dist/wc-prescription-details/browser && rm -f ./dist/wc-prescription-details/prerendered-routes.json && cp wc-prescription-details/package.json dist/wc-prescription-details/",
+    "build:wc:details": "ng build wc-prescription-details --configuration production --output-hashing none && vite build --mode production -c ./wc-prescription-details/vite.config.mjs && rm -rf ./dist/wc-prescription-details/browser && rm -f ./dist/wc-prescription-details/prerendered-routes.json && cp wc-prescription-details/package.json dist/wc-prescription-details/ && cp wc-prescription-details/README.md dist/wc-prescription-details/",
     "serve:wc:details": "ng serve wc-prescription-details",
-    "build:wc:list": "ng build wc-prescription-list --configuration production --output-hashing none && vite build --mode production -c ./wc-prescription-list/vite.config.mjs && rm -rf ./dist/wc-prescription-list/browser && rm -f ./dist/wc-prescription-list/prerendered-routes.json && cp wc-prescription-list/package.json dist/wc-prescription-list/",
+    "build:wc:list": "ng build wc-prescription-list --configuration production --output-hashing none && vite build --mode production -c ./wc-prescription-list/vite.config.mjs && rm -rf ./dist/wc-prescription-list/browser && rm -f ./dist/wc-prescription-list/prerendered-routes.json && cp wc-prescription-list/package.json dist/wc-prescription-list/ && cp wc-prescription-list/README.md dist/wc-prescription-list/",
     "serve:wc:list": "ng serve wc-prescription-list",
-    "build:wc:create": "ng build wc-prescription-create --configuration production --output-hashing none && vite build --mode production -c ./wc-prescription-create/vite.config.mjs && rm -rf ./dist/wc-prescription-create/browser && rm -f ./dist/wc-prescription-create/prerendered-routes.json && cp wc-prescription-create/package.json dist/wc-prescription-create/",
+    "build:wc:create": "ng build wc-prescription-create --configuration production --output-hashing none && vite build --mode production -c ./wc-prescription-create/vite.config.mjs && rm -rf ./dist/wc-prescription-create/browser && rm -f ./dist/wc-prescription-create/prerendered-routes.json && cp wc-prescription-create/package.json dist/wc-prescription-create/ && cp wc-prescription-create/README.md dist/wc-prescription-create/",
     "serve:wc:create": "ng serve wc-prescription-create",
     "build:mags-prescription-list:custom-element": "ng build mags-prescription-list-webcomponent",
     "build:mags-prescription-list": "ng build mags-prescription-list-webcomponent --configuration production --output-hashing none && vite build --mode production -c ./wrappers/components/mags-prescription-list/vite.config.mjs && rollup -c ./wrappers/components/mags-prescription-list/rollup.config.dts.mjs",
